k8s/k8s-ingress/03-ingress-controller.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: default 
spec:
  replicas: 2
  selector:
    matchLabels:
        k8s-app: nginx-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.10
          args:
             - /nginx-ingress-controller
             - --default-backend-service=default/default-http-backend
             - --default-ssl-certificate=$(POD_NAMESPACE)/tls-certificate
          ports:
          - name: http
            containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
  namespace: default
spec:
 # type LoadBalancer: only GKE/AWS/AKS
  type: NodePort
  ports:
  - name: http
    port: 80
    nodePort: 30080
    targetPort: 80
    protocol: TCP
  selector:
    k8s-app: nginx-ingress-lb
