k8s/k8s-ingress/04-ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-httpd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web1.local1.site
    http:
      paths:
      - path:
        backend:
          serviceName: httpd-svc
          servicePort: 80
